trying to fix horizontal scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body, html{
   margin: 0;
   height: 100vh;
-  width: 100vw;
   background-color: black;
   font-family: 'Playfair Display', 'Slabo 27px', serif;
 }
